@@ -1,4 +1,5 @@
 - Automatically read and convert Unlimited Trees mod data
+- Streamline post-load RenderGroup refresh process
 
 
 Verson 0.9.2 -
